# coding-challenges

./: .gitignore  LICENSE.md  README.md
01-falling-sand/: Cargo.toml  REFERENCES.md
01-falling-sand/src/: main.rs
02-reaction-diffusion-algorithm/: Cargo.toml  REFERENCES.md  watch.sh
02-reaction-diffusion-algorithm/src/: main.rs
03-classic-cube/: CMakeLists.txt  README.md  REFERENCES.md
03-classic-cube/cmake/: copy_shaders.cmake
03-classic-cube/shaders/: cube.frag  cube.vert
03-classic-cube/source/: main.cpp
cpp-empty-template/: CMakeLists.txt
cpp-empty-template/cmake/: copy_shaders.cmake  get_cinder.cmake  get_cpm.cmake
cpp-empty-template/source/: main.cpp
rust-empty-template/: Cargo.toml
rust-empty-template/src/: main.rs
